--- a/packagers/Linux/template/packages/Application/meta/license.html
+++ b/packagers/Linux/template/packages/Application/meta/license.html
@@ -1,9 +1,9 @@
 <h3 style="text-align: center;">ADB WIRELESS CONNECT LICENSE</h3>
-<p style="text-align: center;">1 January 2022</p>
+<p style="text-align: center;">August 2022</p>
 <p>Copyright © 2022 Robert J. Joynt.</p>
 
 <p>This software named "ADB Wireless Connect" uses the <a href="https://www.qt.io/">QT</a> GPLv3 Open Source License.
-&lt;<a href="https://doc.qt.io/qt-5/gpl.html">https://doc.qt.io/qt-5/gpl.html</a>&gt;</p>
+&lt;<a href="https://doc.qt.io/qt-6/gpl.html">https://doc.qt.io/qt-6/gpl.html</a>&gt;</p>
 
 <p>This software is distributed under the GNU General Public License Version 3.</p>
 
